# karaokify-rs

./: .dockerignore  .drone.yml  Cargo.toml  Dockerfile
src/: bot.rs  main.rs
src/downloader/: mod.rs  song_downloader.rs
src/downloader/handlers/: mod.rs  spotifydown.rs  yams.rs
src/helpers/: domain.rs  download.rs  id.rs  mod.rs  status_message.rs  temp_dir.rs  temp_file.rs
src/helpers/header/: content_disposition.rs
src/processor/: demucs.rs  mod.rs  song.rs
