[package]
name = "karaokify"
version = "0.1.0"
edition = "2021"

[dependencies]
addr = "0.15.6"
anyhow = "1.0.86"
async-trait = "0.1.81"
deadqueue = "0.2.4"
dotenvy = "0.15.7"
dptree = "0.3.0"
once_cell = { version = "1.19.0", features = ["parking_lot"] }
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls", "charset", "gzip", "json", "http2", "stream"] }
serde = { version = "1.0.204", features = ["alloc", "derive"] }
serde_json = { version = "1.0.120", features = ["alloc"] }
teloxide = { version = "0.12.2", features = ["cache-me", "macros", "rustls", "trace-adaptor"], default-features = false }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "parking_lot", "process"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "parking_lot"] }
tryhard = "0.5.1"
url = "2.5.2"
zip = "2.1.3"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
module_name_repetitions = "allow"
single_match_else = "allow"
manual_let_else = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
no_effect_underscore_binding = "allow"
cognitive_complexity = "allow"

[profile.release]
strip = true
# opt-level = "s"
lto = "thin"
# panic = "abort"
codegen-units = 1
